--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Swift <theycallmeswift@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "~3.0.0rc3"
+    "express": "3.0.0rc3"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
