--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Swift <theycallmeswift@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "3.0.0rc3"
+    "express": "3.0.0rc3",
+    "request": "~2.10.0"
   },
   "engines": {
     "node": "0.8.x",
