--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "BSD",
   "dependencies": {
     "express": "3.0.0rc3",
-    "request": "~2.10.0"
+    "request": "~2.10.0",
+    "cluster-master": "0.0.9"
   },
   "engines": {
     "node": "0.8.x",
