--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Swift <theycallmeswift@gmail.com>",
-  "license": "BSD",
+  "license": "Beerware",
   "dependencies": {
     "express": "3.0.0rc3",
     "request": "~2.10.0",
